[project]
name = "binance-trader-c1"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "fire>=0.7.0",
    "numpy==1.26",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.1",
    "spot>=0.1a0",
    "joblib>=1.4.2",
    "pyarrow>=19.0.1",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "empyrical>=0.5.5",
    "tabulate>=0.9.0",
    "fancytable>=0.0.3",
    "pandas>=2.2.3",
    "pandarallel>=1.6.5",
    "ipykernel>=6.29.5",
    "ccxt>=4.4.72",
    "python-binance>=1.0.28",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/binance_trader_c1"]
